fix bg and z-index on reply box

--- a/css/sc.css
+++ b/css/sc.css
@@ -297,6 +297,8 @@ h1 {
   width: 95%;
   padding: 2.5%;
   position: absolute;
+  background: #FFF;
+  z-index: 9999;
 }
 
 .loading {
